# Template

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  make.ps1  vcpkg-configuration.json  vcpkg.json
.gitlab/: .gitlab-ci.yml  build-for-ci.ps1
cmake/: CMakeLists.txt  copydll.cmake  deploy.cmake
scripts/: version.ps1
src/: CMakeLists.txt
src/LearnCuda/: CMakeLists.txt
src/LearnCuda/src/: cudapp.cuh  main.cu
src/OpenGLRenderEngine/: CMakeLists.txt
src/OpenGLRenderEngine/src/: main.cpp
src/StandardCodeLibrary/: CMakeLists.txt
src/StandardCodeLibrary/include/scl/: bitmask_enum.hpp  dsu.hpp  fenwick.hpp  flags.hpp  fraction.hpp  hdl.hpp  lazyeraseheap.hpp  lcatree.hpp  modbase.hpp  rmq.hpp  singleton.hpp  strhash.cpp  strhash.hpp  temporary.hpp  timer.hpp
src/StandardCodeLibrary/src/: cache.cpp  timer.cpp
tests/: CMakeLists.txt
tests/demo/: CMakeLists.txt
tests/demo/src/: ModBase.cpp  a1.cpp  a2.cpp  a3.cpp  backup.cpp  main.cpp
tests/libavoid/: CMakeLists.txt
tests/libavoid/include/libavoid/: assertions.h
tests/testlibavoid/: CMakeLists.txt  SchematicHelper.cpp  SchematicHelper.hpp  example.cpp  main.cpp
